apps/cli/src/snapshots/costroid__render__tests__snapshot_now_all_arms_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_now(&all_arms_now(), RenderOptions::braille(true))"
---
[1;38;5;154mC⠉[0m [1mcost[0m[38;5;245mroid[0m                                   [38;5;245mthis week[0m  [1m~$42.18[0m
────────────────────────────────────────────────────────────────
[38;5;245mlimits[0m
  claude code  5h  [38;5;39m⣿⣿⣿⣿⣿⣿⡇[0m[38;5;24m⣀⣀⣀⣀⣀[0m  55%  resets 2h  as of 08:30
[38;5;245m    reflects Claude Code's view; claude.ai chat usage may make true usage higher.[0m
  claude code  wk  [38;5;245m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇[0m  96% ? unverified  resets 2d 2h  as of 08:30
[38;5;245m    reflects Claude Code's view; claude.ai chat usage may make true usage higher.[0m
  codex        5h  [38;5;39m⣿⣿⣿⣿⡇[0m[38;5;24m⣀⣀⣀⣀⣀⣀⣀[0m  40%  resets 41m  as of 08:30
  cursor       mo  $18.50 / $20.00 used  resets 12d  as of 08:30
  cursor       wk  [33;1m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇[0m[38;5;24m⣀[0m  88% !  partial: limit data incomplete  as of 08:30
  claude code  1d  usage: 1,234,567 tokens (~$12.34, estimated) — quota % unavailable
[38;5;245m    reflects Claude Code's view; claude.ai chat usage may make true usage higher.[0m
  codex        1d  usage: 5,000 tokens (estimated) — quota % unavailable
  cursor       cyc unavailable: no sanctioned source
────────────────────────────────────────────────────────────────
[38;5;245mapi costs (this week)[0m
  [38;5;38m● [0m[1mclaude opus 4.7   [0m[38;5;38m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m  [1m~$24.10[0m
  [38;5;79m● [0m[1mgpt 5.5           [0m[38;5;79m⣿⣿⣿⣿⣿⡇[0m[38;5;24m⣀⣀⣀⣀⣀⣀[0m  [1m~$11.30[0m
  [38;5;75m● [0m[1msonnet 4.6        [0m[38;5;75m⣿⣿⣿[0m[38;5;24m⣀⣀⣀⣀⣀⣀⣀⣀⣀[0m  [1m~$6.78[0m
────────────────────────────────────────────────────────────────
subscription API-equivalent value (estimate, not bill)
  [38;5;38m● [0m[1mgpt 5.5           [0m[38;5;24m⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[0m  [1m~$0.00[0m  [unpriced/partial]
────────────────────────────────────────────────────────────────
unknown-access usage (partial)
  [38;5;38m● [0m[1mmystery model     [0m[38;5;24m⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[0m  [1m~$0.00[0m  [unknown model/unpriced]
────────────────────────────────────────────────────────────────
[1;38;5;154m◆ [0mclaude code wk at 96% (unverified), resets 2d 2h.
provider cursor missing: no local data found
