apps/cli/src/snapshots/costroid__render__tests__snapshot_now_ascii.snap
---
source: apps/cli/src/render.rs
expression: "render_now(&priced_now(), RenderOptions::ascii(false))"
---
costroid costroid                                   this week  ~$42.18
────────────────────────────────────────────────────────────────
limits
  claude code  5h  unavailable: unavailable
  codex        5h  [#########---]  78%  resets 41m
  codex        wk  [###########-]  92% !  resets 2d 6h
  cursor       wk  [###########+]  97% !!  partial: limit data incomplete
────────────────────────────────────────────────────────────────
api costs (this week)
  claude opus 4.7     [############]       ~$24.10
  gpt 5.5             [#####+------]       ~$11.30
  sonnet 4.6          [###---------]        ~$6.78
────────────────────────────────────────────────────────────────
subscription API-equivalent value (estimate, not bill)
  gpt 5.5             [------------]        ~$0.00  [unpriced/partial]
────────────────────────────────────────────────────────────────
unknown-access usage (partial)
  mystery model       [------------]        ~$0.00  [unknown model/unpriced]
────────────────────────────────────────────────────────────────
◆ cursor wk at 97%, resets unknown.
provider cursor missing: no local data found
