apps/cli/src/snapshots/costroid__render__tests__snapshot_now_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_now(&priced_now(), RenderOptions::plain())"
---
costroid now
period: this week, estimated API spend: ~$42.18
limits:
  claude code 5h: unavailable, unavailable
  codex 5h: 78% used, resets in 41m
  codex wk: 92% used (near limit), resets in 2d 6h
  cursor wk: partial, 97% used, limit data incomplete
api costs this week:
  claude opus 4.7: ~$24.10, 60 tokens
  gpt 5.5: ~$11.30, 60 tokens
  sonnet 4.6: ~$6.78, 60 tokens
subscription API-equivalent value, estimate not bill:
  gpt 5.5: ~$0.00, 60 tokens, unpriced/partial
unknown-access usage, partial:
  mystery model: ~$0.00, 60 tokens, unknown model/unpriced
insight: cursor wk at 97%, resets unknown.
provider cursor missing: no local data found
