apps/cli/src/snapshots/costroid__render__tests__snapshot_now_subscription_only_has_explicit_empty_api_state.snap
---
source: apps/cli/src/render.rs
expression: "render_now(&subscription_only_now(), RenderOptions::braille(false))"
---
C⠉ costroid                                   this week  ~$0.00
────────────────────────────────────────────────────────────────
limits
  claude code  5h  unavailable: unavailable
  codex        5h  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀  78%  resets 41m
  codex        wk  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣀  92% !  resets 2d 6h
  cursor       wk  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇  97% !!  partial: limit data incomplete
────────────────────────────────────────────────────────────────
api costs (this week)
  no API usage in this period
────────────────────────────────────────────────────────────────
subscription/local usage (not API bill)
  gpt 5.5             ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀        ~$0.00  [unpriced/partial]
────────────────────────────────────────────────────────────────
◆ cursor wk at 97%, resets unknown.
provider cursor missing: no local data found
